--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,10 @@
+@import url(http://fonts.googleapis.com/css?family=Cuprum);
+@import url(http://fonts.googleapis.com/css?family=Cuprum);
+@import url(http://fonts.googleapis.com/css?family=Cuprum);
+@import url(http://fonts.googleapis.com/css?family=Cuprum);
 @font-face { font-family: "FiveMinutes"; src: url("../fonts/fiveminutes.eot"); src: url("../fonts/fiveminutes.eot?#iefix") format("embedded-opentype"), url("../fonts/fiveminutes.woff") format("woff"), url("../fonts/fiveminutes.ttf") format("truetype"), url("../fonts/fiveminutes.svg#fiveminutes") format("svg"); font-weight: normal; font-style: normal; }
+
+.logo, .nav a { font: 0/0 a; text-shadow: none; color: transparent; }
 
 * { margin: 0; padding: 0; }
 
@@ -16,37 +22,38 @@ p { line-height: 1.2; }
 
 li { list-style: none; }
 
-textarea, button, select, input { border: none; outline: none; }
+textarea, button, select, input { border: none; outline: none; font-family: "Cuprum", Arial, Tahoma, sans-serif; }
 
 button { line-height: 1; cursor: pointer; }
 
 table { border-spacing: 0; border-collapse: collapse; }
 
-.wrap { width: 960px; min-height: 100%; height: auto !important; height: 100%; margin: 0 auto -140px; }
-
-.container { width: 960px; margin: 0 auto; }
-
-.push { height: 140px; clear: both; }
+.wrap, .container { width: 960px; margin: 0 auto; }
 
 .header { height: 220px; margin-bottom: 65px; overflow: hidden; }
 
-.logo { position: relative; float: left; margin: 48px 40px 0 0; padding-left: 85px; font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 56px; text-shadow: rgba(255, 255, 255, 0.9) 0 1px 0; letter-spacing: -3px; }
-.logo:before { content: ""; position: absolute; top: -7px; left: 12px; background: url('../img/icons-s47f9d69766.png') 0 -127px no-repeat; width: 64px; height: 87px; }
+.logo { position: relative; float: left; margin: 41px 40px 0 12px; background: url('../img/icons-sdecd4accde.png') 0 -126px no-repeat; width: 254px; height: 87px; }
 
-.nav { float: left; margin-top: 28px; }
+.nav { float: left; margin-top: 23px; }
 .nav ul { overflow: hidden; }
 .nav li { position: relative; float: left; margin-right: 25px; }
-.nav li:hover { background: url('../img/icons-s47f9d69766.png') 0 0 no-repeat; width: 117px; height: 117px; }
-.nav a { position: relative; display: block; width: 117px; height: 54px; padding-top: 63px; text-align: center; font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 22px; text-shadow: rgba(255, 255, 255, 0.9) 0 1px 0; }
-.nav a:before { content: ""; position: absolute; top: 2px; left: 50%; margin-left: -35px; }
+.nav li:hover, .nav li.active { background: url('../img/icons-sdecd4accde.png') 0 0 no-repeat; width: 117px; height: 116px; }
+.nav li.active .nav__item-1 { background: url('../img/icons-sdecd4accde.png') 0 -349px no-repeat; width: 117px; height: 116px; }
+.nav li.active .nav__item-2 { background: url('../img/icons-sdecd4accde.png') 0 -601px no-repeat; width: 117px; height: 116px; }
+.nav li.active .nav__item-3 { background: url('../img/icons-sdecd4accde.png') 0 -853px no-repeat; width: 117px; height: 116px; }
+.nav li:active a { top: 1px; }
+.nav a { position: relative; display: block; }
 
-.nav__item-1:before { background: url('../img/icons-s47f9d69766.png') 0 -224px no-repeat; width: 70px; height: 60px; }
+.nav__item-1 { background: url('../img/icons-sdecd4accde.png') 0 -223px no-repeat; width: 117px; height: 116px; }
+.nav__item-1:hover { background: url('../img/icons-sdecd4accde.png') 0 -349px no-repeat; width: 117px; height: 116px; }
 
-.nav__item-2:before { background: url('../img/icons-s47f9d69766.png') 0 -294px no-repeat; width: 70px; height: 60px; }
+.nav__item-2 { background: url('../img/icons-sdecd4accde.png') 0 -475px no-repeat; width: 117px; height: 116px; }
+.nav__item-2:hover { background: url('../img/icons-sdecd4accde.png') 0 -601px no-repeat; width: 117px; height: 116px; }
 
-.nav__item-3:before { background: url('../img/icons-s47f9d69766.png') 0 -364px no-repeat; width: 70px; height: 60px; }
+.nav__item-3 { background: url('../img/icons-sdecd4accde.png') 0 -727px no-repeat; width: 117px; height: 116px; }
+.nav__item-3:hover { background: url('../img/icons-sdecd4accde.png') 0 -853px no-repeat; width: 117px; height: 116px; }
 
-.login { float: right; margin-top: 45px; }
+.login { float: right; margin: 45px 5px 0 0; }
 
 .login__pic { float: left; padding: 3px 3px 13px 3px; margin-right: 27px; background: rgba(255, 255, 255, 0.5); -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 0 0 1px, white 0 0 4px inset; -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 0 0 1px, white 0 0 4px inset; box-shadow: rgba(0, 0, 0, 0.1) 0 0 0 1px, white 0 0 4px inset; }
 .login__pic img { display: block; -webkit-box-shadow: rgba(0, 0, 0, 0.01) 0 0 0 1px; -moz-box-shadow: rgba(0, 0, 0, 0.01) 0 0 0 1px; box-shadow: rgba(0, 0, 0, 0.01) 0 0 0 1px; }
@@ -56,15 +63,15 @@ table { border-spacing: 0; border-collapse: collapse; }
 .login__info span { margin: 5px 0 5px 0; color: #2c6871; }
 .login__info a { margin-bottom: 10px; color: #c85838; }
 .login__info button { position: relative; height: 18px; padding: 0 9px 0 22px; background: #c85838; -webkit-border-radius: 9px; -moz-border-radius: 9px; -ms-border-radius: 9px; -o-border-radius: 9px; border-radius: 9px; font-family: "Cuprum", Arial, Tahoma, sans-serif; font-size: 12px; color: white; text-transform: uppercase; }
-.login__info button:before { content: ""; position: absolute; top: 4px; left: 7px; background: url('../img/icons-s47f9d69766.png') 0 -698px no-repeat; width: 10px; height: 10px; }
+.login__info button:before { content: ""; position: absolute; top: 4px; left: 7px; background: url('../img/icons-sdecd4accde.png') 0 -1277px no-repeat; width: 10px; height: 10px; }
 
 .slider { position: relative; }
 
 .slider__prev, .slider__next { position: absolute; top: 50%; margin-top: -51px; }
 
-.slider__prev { left: -75px; background: url('../img/icons-s47f9d69766.png') 0 -586px no-repeat; width: 22px; height: 102px; }
+.slider__prev { left: -75px; background: url('../img/icons-sdecd4accde.png') 0 -1131px no-repeat; width: 22px; height: 102px; }
 
-.slider__next { right: -75px; background: url('../img/icons-s47f9d69766.png') 0 -474px no-repeat; width: 22px; height: 102px; }
+.slider__next { right: -75px; background: url('../img/icons-sdecd4accde.png') 0 -1019px no-repeat; width: 22px; height: 102px; }
 
 .slider__list ul { overflow: hidden; }
 .slider__list li { position: relative; float: left; width: 284px; margin-bottom: 55px; padding: 0 18px; }
@@ -83,7 +90,7 @@ table { border-spacing: 0; border-collapse: collapse; }
 .slider__type_pending { background: #9ca199; }
 
 .slider__info { margin: -45px 40px 0 40px; padding: 63px 13px 23px 13px; background: rgba(255, 255, 255, 0.3); -webkit-border-radius: 10px; -moz-border-radius: 10px; -ms-border-radius: 10px; -o-border-radius: 10px; border-radius: 10px; }
-.slider__info a { font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 32px; text-shadow: rgba(255, 255, 255, 0.9) 0 1px 0; }
+.slider__info a { font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 32px; font-weight: bold; text-shadow: rgba(255, 255, 255, 0.9) 0 1px 0; }
 
 .slider__btns { margin: 9px -10px 0 0; overflow: hidden; }
 .slider__btns button { position: relative; float: left; height: 18px; margin-left: 6px; padding: 0 8px 0 19px; -webkit-border-radius: 8px; -moz-border-radius: 8px; -ms-border-radius: 8px; -o-border-radius: 8px; border-radius: 8px; font-family: "Cuprum", Arial, Tahoma, sans-serif; font-size: 12px; color: white; text-transform: uppercase; }
@@ -91,19 +98,44 @@ table { border-spacing: 0; border-collapse: collapse; }
 .slider__btns button:first-child { margin-left: 0; }
 
 .slider__submit { background: #a9a555; }
-.slider__submit:before { background: url('../img/icons-s47f9d69766.png') 0 -434px no-repeat; width: 9px; height: 10px; }
+.slider__submit:before { background: url('../img/icons-sdecd4accde.png') 0 -979px no-repeat; width: 9px; height: 10px; }
 
 .slider__edit { background: #349ba6; }
-.slider__edit:before { background: url('../img/icons-s47f9d69766.png') 0 -718px no-repeat; width: 9px; height: 9px; }
+.slider__edit:before { background: url('../img/icons-sdecd4accde.png') 0 -1297px no-repeat; width: 9px; height: 9px; }
 
 .slider__delete { background: #c85838; }
-.slider__delete:before { background: url('../img/icons-s47f9d69766.png') 0 -454px no-repeat; width: 9px; height: 10px; }
+.slider__delete:before { background: url('../img/icons-sdecd4accde.png') 0 -999px no-repeat; width: 9px; height: 10px; }
+
+.bottom { overflow: hidden; }
+
+.link { float: right; width: 352px; height: 65px; padding: 50px 0 0 88px; background: url(../img/link.png); }
+.link a { font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 38px; font-weight: bold; color: white; }
+.link span { color: #2c6871; }
+
+.footer { position: relative; top: -15px; background: url(../img/footer.png) repeat-x; }
+.footer .container { height: 100px; overflow: hidden; }
+
+.footer__nav { float: left; margin-top: 50px; }
+.footer__nav ul { overflow: hidden; }
+.footer__nav li { float: left; margin-right: 20px; }
+.footer__nav a { font-size: 13px; color: #d8dedf; }
+
+.copyright { float: right; margin-top: 50px; opacity: 0.6; color: #bdc8ca; }
+
+.btn-earning { position: relative; height: 52px; padding: 0 15px 0 45px; border: 3px solid #e4e4d2; -webkit-border-radius: 26px; -moz-border-radius: 26px; -ms-border-radius: 26px; -o-border-radius: 26px; border-radius: 26px; background: #a9a555; font-size: 24px; color: white; text-shadow: rgba(0, 0, 0, 0.26) 1px 1px 0; }
+.btn-earning:before { content: ""; position: absolute; top: 11px; left: 9px; background: url('../img/icons-sdecd4accde.png') 0 -1243px no-repeat; width: 30px; height: 24px; }
 
 .test { display: none; position: absolute; top: 0; left: 50%; margin-left: -888px; }
 
 @font-face { font-family: "FiveMinutes"; src: url("../fonts/fiveminutes.eot"); src: url("../fonts/fiveminutes.eot?#iefix") format("embedded-opentype"), url("../fonts/fiveminutes.woff") format("woff"), url("../fonts/fiveminutes.ttf") format("truetype"), url("../fonts/fiveminutes.svg#fiveminutes") format("svg"); font-weight: normal; font-style: normal; }
 
+.logo, .nav a { font: 0/0 a; text-shadow: none; color: transparent; }
+
 /*styles for layouts */
 @font-face { font-family: "FiveMinutes"; src: url("../fonts/fiveminutes.eot"); src: url("../fonts/fiveminutes.eot?#iefix") format("embedded-opentype"), url("../fonts/fiveminutes.woff") format("woff"), url("../fonts/fiveminutes.ttf") format("truetype"), url("../fonts/fiveminutes.svg#fiveminutes") format("svg"); font-weight: normal; font-style: normal; }
 
+.logo, .nav a { font: 0/0 a; text-shadow: none; color: transparent; }
+
 @font-face { font-family: "FiveMinutes"; src: url("../fonts/fiveminutes.eot"); src: url("../fonts/fiveminutes.eot?#iefix") format("embedded-opentype"), url("../fonts/fiveminutes.woff") format("woff"), url("../fonts/fiveminutes.ttf") format("truetype"), url("../fonts/fiveminutes.svg#fiveminutes") format("svg"); font-weight: normal; font-style: normal; }
+
+.logo, .nav a { font: 0/0 a; text-shadow: none; color: transparent; }
