--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -9,6 +9,7 @@ $yellow: #f1dba1
 $green: #8a8522
 $green-light: #a9a555
 //fonts
+@import url(http://fonts.googleapis.com/css?family=Cuprum)
 @font-face 
   font-family: 'FiveMinutes'
   src: url('../fonts/fiveminutes.eot')
@@ -27,6 +28,10 @@ $icons: sprite-map("icons/*.png", $spacing: 10px)
     height: 0
     clear: both
     visibility: hidden
+%hide-text
+  font: 0/0 a
+  text-shadow: none
+  color: transparent
 //mixins
 @mixin rotate($deg: 0) 
   -moz-transform: rotate($deg+ deg)
@@ -34,16 +39,13 @@ $icons: sprite-map("icons/*.png", $spacing: 10px)
   -webkit-transform: rotate($deg+ deg)
   -ms-transform: rotate($deg+ deg)
   transform: rotate($deg+ deg)
-
 @mixin image-size($path)
   width: image-width($path)
-  height: image-height($path)
-  
+  height: image-height($path)  
 @mixin sized-sprite($map, $sprite)
   background: sprite($map, $sprite) no-repeat
   @include image-size(sprite-file($map, $sprite))
-  
-
+//animations
 
 
 
