--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,34 @@
 @import url(http://fonts.googleapis.com/css?family=Cuprum);
 @font-face { font-family: "FiveMinutes"; src: url("../fonts/fiveminutes.eot"); src: url("../fonts/fiveminutes.eot?#iefix") format("embedded-opentype"), url("../fonts/fiveminutes.woff") format("woff"), url("../fonts/fiveminutes.ttf") format("truetype"), url("../fonts/fiveminutes.svg#fiveminutes") format("svg"); font-weight: normal; font-style: normal; }
+
+.slider { position: relative; padding-top: 35px; margin-bottom: 20px; }
+
+.slider__prev, .slider__next { position: absolute; top: 50%; margin-top: -51px; }
+
+.slider__prev { left: -75px; background: url('../img/icons-s6bf4203a6c.png') 0 -2099px no-repeat; width: 22px; height: 102px; }
+
+.slider__next { right: -75px; background: url('../img/icons-s6bf4203a6c.png') 0 -1987px no-repeat; width: 22px; height: 102px; }
+
+.slider__list ul { overflow: hidden; }
+.slider__list li { position: relative; float: left; width: 283px; margin-bottom: 55px; padding: 0 18px; }
+
+.slider__pic { position: relative; }
+.slider__pic img { position: relative; margin: 5px 0 0 8px; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; z-index: 10; }
+.slider__pic span { position: absolute; top: 0; left: -7px; z-index: 5; }
+
+.slider__approved { background: url('../img/icons-s6bf4203a6c.png') 0 -1487px no-repeat; width: 105px; height: 105px; }
+
+.slider__saved { background: url('../img/icons-s6bf4203a6c.png') 0 -1832px no-repeat; width: 105px; height: 105px; }
+
+.slider__rejected { background: url('../img/icons-s6bf4203a6c.png') 0 -1602px no-repeat; width: 105px; height: 105px; }
+
+.slider__pending { background: url('../img/icons-s6bf4203a6c.png') 0 -1717px no-repeat; width: 105px; height: 105px; }
+
+.slider__pic-out { position: absolute; top: 0; left: 0; background: url('../img/icons-s6bf4203a6c.png') 0 -223px no-repeat; width: 283px; height: 288px; z-index: 15; }
+
+.slider__info { margin: -45px 40px 0 40px; padding: 63px 13px 23px 13px; background: rgba(255, 255, 255, 0.3); -webkit-border-radius: 10px; -moz-border-radius: 10px; -ms-border-radius: 10px; -o-border-radius: 10px; border-radius: 10px; }
+.slider__info a { font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 32px; font-weight: bold; text-shadow: rgba(255, 255, 255, 0.9) 0 1px 0; }
+
+.slider__btns { margin: 9px -10px 0 0; overflow: hidden; }
+.slider__btns button { float: left; margin-left: 6px; }
+.slider__btns button:first-child { margin-left: 0; }
